--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     </button>
                     <button class="colorBtn" value="#0284C7">Blue</button>
                     <button class="colorBtn" value="#FBBF24">Amber</button>
-                    <button class="colorBtn" value="#DC2626">Red</button>    
+                    <button class="colorBtn" value="#DC2626">Red</button>   
+                    <button class="colorBtn" value="random">Rainbow</button>    
                 </div>
                 
              </div>
